backends/drm: Fix leaving dangling dpms input event filter

If the output is turned back on before m_turnOffTimer expires, the
dpms input event filter won't be reset and all input events will go to
the void.

BUG: 460322


(cherry picked from commit c56517eccc258a8a3cf7fc953540b10de3f3ac26)